chore: split batch